Fix review: use VARCHAR(255) for tenant_id, remove unused Collectors import
Agent-Logs-Url: https://github.com/rasterwebapps/OneBook/sessions/ca0690b7-22ea-47a3-b479-16ff75f9a7ad

Co-authored-by: rasterwebapps <256557304+rasterwebapps@users.noreply.github.com>